Fixing alignment

--- a/css/actions.scss
+++ b/css/actions.scss
@@ -226,6 +226,10 @@
     @media (min-width: 768px) {
       margin-bottom: 0;
       flex: 0 0 calc(33.33% - 24px);
+
+      &:not(:first-child) {
+        padding-top: 36px;
+      }
     }
   }
 
